# fileman

./: .gitignore  0Temp.c  0temp.c  Notes.md  Readme.md  application.c  application.h  appmenu.c  appmenu.h  appwindow.c  appwindow.h  config.h  debug.h  deps_search.txt  fileman.pro  fileman.xml  install.sh  launcher.c  launcher.h  main.c  marshal.c  marshal.h  marshal.list  menu.c  meson.build  notes.txt  preferences.c  preferences.h  prefs.txt  thunar-application.c  thunar-application.h  thunar-debug.h  thunar-marshal.c  thunar-marshal.h  thunar-preferences.c  thunar-preferences.h  thunar-private.h  thunar-window.c  thunar-window.h  thunar.pro  (+2 more)
0history/: 0000-history.txt  0001-Updates_for_release.diff  0003-Add_date_deleted_column_for_the_trash_dir.diff  0007-Fix_misc-full-path-in-title_memory_fault_.diff  0008-Changed_default_misc-full-path-in-title_t.diff  0009-Shortcuts_view_regression__Watch_trash_for.diff  0013-Add_three_dots_to_set_default_application.diff  0014-Split_Rename_Files_button_into_Apply_and_Do.diff  0016-List_view_Leave_size_column_blank_for_dire.diff  0018-Fix_style_and_uninitialized_renamer_dialog-.diff  0019-Add_section_Default_Application_to_thuna.diff  0025-thunar_g_file_list_prepend_--_thunar_g_lis.diff  0026-thunar_g_file_list_copy_--_thunar_g_list_c.diff  0030-On_Select_by_Pattern_add_option_for_case_.diff  0032-Add_Option_to_not_switch_focus_while_openin.diff  0034-Remove_border_around_infobar_in_trash.diff  0036-Make_use_of_xfce_icon_orgxfcesettingsde.diff  0041-Scroll_to_the_correct_height_after_changing.diff  0042-Fix_regression_middle_mouse_click_on_folde.diff  0044-Select_the_correct_bookmark_after_opening_a.diff  0046-Override_misc-switch-to-new-tab_in_thunar_a.diff  0047-Add_a_reload_button_for_the_buttons_toolb.diff  0051-Fix_GtkCritical_when_poking_an_invalid-link.diff  0054-Make_the_Today_and_Yesterday_labels_ava.diff  0055-Thunar_Allow_middle-clicking_navigation_bu.diff  0056-Fix_inconsistent_naming_and_unused_variable.diff  0060-Back_to_development.diff  0061-Regression_Activating_Desktop_Icon_does_no.diff  0063-Back_to_development.diff  0071-Manage_parallel_job_outside_ThunarTransferJ.diff  0075-Fix_GLib-CRITICAL_in_list-view_Issue_487.diff  0076-Generate_incremental_file_name_when_a_name_.diff  0080-Add_basic_support_for_gtk-recent_Issue_25.diff  0081-Add_support_for_the_recent_location_i.diff  0085-Fix_build_warnings.diff  0086-Remove_reload_button_from_toolbar_125.diff  0089-Keep_modified_time_of_files_copied_from_for.diff  0090-Ask_close_window_with_tabs_as_well_for_S.diff  0092-For_footxt_next_available_file_should_be.diff  0093-After_restoring_tabs_set_focus_on_the_last_.diff  (+152 more)
0other/: exo-thumbnail.c  exo-thumbnail.h  thunar-column-editor.c  thunar-preferences.c  thunar-preferences.h  thunar-sendto-model.c  thunar-sendto-model.h  xfce-resource.c  xfce-resource.h
commits/: 0070-Replace_ExoBinding_with_GBinding_equivalent.diff
core/: appnotify.c  appnotify.h  clipboard-man.c  clipboard-man.h  clipboard-manager.c  clipboard-manager.h  clipboard.c  clipboard.h  clipman.c  clipman.h  device-mon.c  device-monitor.c  device-monitor.h  device.c  devmon.c  devmon.h  devmonitor.c  devmonitor.h  dnd.c  dnd.h  file-mon.c  file-monitor.c  fileinfo.c  fileinfo.h  filemon.c  filemon.h  filemonitor.c  filemonitor.h  th-device.c  th-device.h  th-file.c  th-file.h  th-folder.c  th-folder.h  th_device.c  th_device.h  th_file.c  th_file.h  th_folder.c  th_folder.h  (+42 more)
data/: fileman.desktop
dialog/: appchooser.c  appchooser.h  appcombo.c  appcombo.h  appdialog.c  appdialog.h  appmodel.c  appmodel.h  chooser-button.c  chooser-combo.c  chooser-dlg.c  chooser-model.c  dialogs.c  dialogs.h  permbox.c  permbox.h  permissions.c  permissions.h  progress-dlg.c  progress-dlg.h  progress-view.c  progress_dlg.c  progress_dlg.h  progress_view.c  progress_view.h  progressdlg.c  progressdlg.h  progressview.c  progressview.h  propdlg.c  properties-dlg.c  propsdlg.c  propsdlg.h  thunar-chooser-button.c  thunar-chooser-button.h  thunar-chooser-dialog.c  thunar-chooser-dialog.h  thunar-chooser-model.c  thunar-chooser-model.h  thunar-dialogs.c  (+10 more)
docs/: search_exo.txt  search_full.txt  search_result.txt  search_xfce.txt  thunar-filter.txt
extension/: thunar-gdk-extensions.c  thunar-gdk-extensions.h  thunar-gio-extensions.c  thunar-gio-extensions.h  thunar-gobject-extensions.c  thunar-gobject-extensions.h  thunar-gtk-extensions.c  thunar-gtk-extensions.h  thunar-pango-extensions.c
job/: dcount-job.c  dcount_job.c  dcount_job.h  dcountjob.c  dcountjob.h  deep-count-job.c  deep-count-job.h  exo-job.c  exo-job.h  exo_job.c  exo_job.h  io-jobs-util.c  io-jobs-util.h  io-jobs.c  io-jobs.h  io-scan-directory.c  io-scan-directory.h  io-scandir.c  io-scandir.h  io_jobs.c  io_jobs.h  io_scan_directory.c  io_scandir.c  io_scandir.h  job-utils.c  job.c  job.h  job_utils.c  jobutils.c  jobutils.h  simple-job.c  simple-job.h  simple_job.c  simple_job.h  simplejob.c  simplejob.h  thunar-deep-count-job.c  thunar-deep-count-job.h  thunar-io-jobs-util.c  thunar-io-jobs-util.h  (+15 more)
libext/: cell-renderer-icon.c  egdk-pixbuf.c  egdk-pixbuf.h  etktype.h  exo-cell-renderer-icon.c  exo-cell-renderer-icon.h  exo-gdk-pixbuf-extensions.c  exo-gdk-pixbuf-extensions.h  exo-icon.c  exo-icon.h  exo-job.c  exo-job.h  exo-thumbnail.c  exo-tree-view.c  exo-tree-view.h  exo.c  exo.h  exo_job.c  exo_tree_view.c  exo_tree_view.h  exo_treeview.c  exo_treeview.h  gdk-ext.c  gdk-ext.h  gdk-extensions.c  gdk-pixbuf-extensions.c  gdk-pixbuf-extensions.h  gdk_ext.c  gdk_ext.h  gdkpixbuf-ext.c  gdkpixbuf-ext.h  gio-ext.c  gio-ext.h  gio-extensions.c  gio_ext.c  gio_ext.h  gobject-ext.c  gobject-ext.h  gobject-extensions.c  gtk-ext.c  (+24 more)
menu/: launcher.c  launcher.h  menu.c  menu.h  thunar-launcher.c  thunar-launcher.h  thunar-menu.c  thunar-menu.h  thunar-sendto-model.c  thunar-sendto-model.h
misc/: app-notify.c  app-notify.h  app_notify.c  app_notify.h  appnotify.c  appnotify.h  browser.c  browser.h  component.c  component.h  enum-types.c  enum-types.h  enum_types.c  enum_types.h  enumtypes.c  enumtypes.h  (+41 more)
(+340 files in other folders)
